--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,7 +14,7 @@
     <fragment
         android:id="@+id/nav_browse"
         android:name="com.studhub.app.ui.Browse.BrowseFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_browse"
         tools:layout="@layout/fragment_browse" />
 
     <fragment
