--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,5 +17,8 @@
             android:id="@+id/nav_about"
             android:icon="@android:drawable/ic_menu_info_details"
             android:title="@string/menu_about" />
+        <item
+            android:id="@+id/nav_cart"
+            android:title="@string/menu_cart" />
     </group>
 </menu>
