--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,18 +7,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_browse"
             android:icon="@android:drawable/ic_menu_search"
             android:title="@string/menu_browse" />
         <item
+            android:id="@+id/nav_cart"
+            android:icon="@drawable/icons8_shopping_cart_64"
+            android:title="@string/menu_cart" />
+        <item
             android:id="@+id/nav_about"
             android:icon="@android:drawable/ic_menu_info_details"
             android:title="@string/menu_about" />
-        <item
-            android:id="@+id/nav_cart"
-            android:title="@string/menu_cart" />
     </group>
 </menu>
