--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,4 +23,10 @@
         android:label="@string/menu_about"
         tools:layout="@layout/fragment_about" />
 
+    <fragment
+        android:id="@+id/nav_cart"
+        android:name="com.studhub.app.ui.Cart.CartFragment"
+        android:label="@string/menu_cart"
+        tools:layout="@layout/fragment_cart" />
+
 </navigation>
