Add MessagesFragment , task complete.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,4 +29,10 @@
         android:label="@string/menu_cart"
         tools:layout="@layout/fragment_cart" />
 
+    <fragment
+        android:id="@+id/nav_messages"
+        android:name="com.studhub.app.ui.Messages.MessagesFragment"
+        android:label="@string/menu_messages"
+        tools:layout="@layout/fragment_messages" />
+
 </navigation>
