--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,10 @@
             android:icon="@drawable/icons8_shopping_cart_64"
             android:title="@string/menu_cart" />
         <item
+            android:id="@+id/nav_messages"
+            android:icon="@android:drawable/ic_menu_send"
+            android:title="@string/menu_messages" />
+        <item
             android:id="@+id/nav_about"
             android:icon="@android:drawable/ic_menu_info_details"
             android:title="@string/menu_about" />
