--- a/app/src/main/res/values/strings_home.xml
+++ b/app/src/main/res/values/strings_home.xml
@@ -7,5 +7,6 @@
     <string name="home_button_add_listing">Add Listing</string>
     <string name="home_button_browse">Browse</string>
     <string name="home_button_cart">Cart</string>
+    <string name="home_button_profile">Profile</string>
     <string name="home_button_about">About</string>
 </resources>
