--- a/app/src/main/res/values/strings_profile.xml
+++ b/app/src/main/res/values/strings_profile.xml
@@ -3,7 +3,10 @@
     <string name="profile_title">Profile</string>
     <string name="profile_btn_sign_out">Sign out</string>
     <string name="profile_btn_edit_profile">Edit</string>
+    <string name="profile_btn_display_favs">Display favorite listings</string>
     <string name="profile_edit_title">Edit profile information</string>
+    <string name="profile_favorites_title">Favorite Listings</string>
+    <string name="profile_favorites_no_favs">No favorite items yet</string>
     <string name="profile_edit_form_label_firstname">First Name</string>
     <string name="profile_edit_form_label_lastname">Last Name</string>
     <string name="profile_edit_form_label_username">User Name</string>
