--- a/app/src/main/res/values/strings_misc.xml
+++ b/app/src/main/res/values/strings_misc.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="misc_currency_symbol">CHF</string>
+    <string name="misc_ellipsis">…</string>
+    <string name="misc_text_with_ellipsis">%s…</string>
 </resources>
