Feature/issue 91 finish messaging system (#119)
Finished implementing the messaging part.
Conversation are created by clicking the "contact seller" button on any product page.
The app then navigates to the conversation, which can be found back later when going to the conversations page from the home menu.
Conversations and messages inside a conversation are automatically updated as messages and conversations are created.

* WIP

* Create view for conversations list. Create view for discussions.

* Add new string resources for conversations

* Move conversations' screen components to separate files

* Specify nav-bar status in each route

* Add users' username in conversation model

* Fix redirection to discussion problem on contact seller

* Modify conversation repository implementation to store users' usernames

* Move sub-composables out and make use of username in header

* Add new-line at EOF

* Minor update in createMessage

* Add color extension for darkening a jetpack compose Color

* Add custom Card composable

* Make use of the custom Card composable

* Add back preview of DetailedListing screen

* Update gradle dependencies

* Add XML header in strings.xml

* Update conversations/chat view

* Update resources

* Add tests for conversations/chat

* Update android manifest

* Return failure when creation conversation with yourself

* Add new-line at EOF

* Minor fix

* Add new-line at EOF

* Round corners of chat bubbles

--- a/app/src/main/res/values/strings_misc.xml
+++ b/app/src/main/res/values/strings_misc.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="misc_currency_symbol">CHF</string>
+    <string name="misc_ellipsis">…</string>
+    <string name="misc_text_with_ellipsis">%s…</string>
+    <string name="misc_btn_go_back">Go back</string>
 </resources>
