--- a/app/src/main/res/values/strings_profile.xml
+++ b/app/src/main/res/values/strings_profile.xml
@@ -7,6 +7,8 @@
     <string name="profile_edit_title">Edit profile information</string>
     <string name="profile_favorites_title">Favorite Listings</string>
     <string name="profile_favorites_no_favs">No favorite items yet</string>
+    <string name="profile_own_listings_title">Your Listings</string>
+    <string name="profile_own_listings_no_listings">You have not created any listings yet.</string>
     <string name="profile_edit_form_label_firstname">First Name</string>
     <string name="profile_edit_form_label_lastname">Last Name</string>
     <string name="profile_edit_form_label_username">User Name</string>
