--- a/app/src/main/res/values/strings_profile.xml
+++ b/app/src/main/res/values/strings_profile.xml
@@ -4,6 +4,7 @@
     <string name="profile_btn_sign_out">Sign out</string>
     <string name="profile_btn_edit_profile">Edit</string>
     <string name="profile_btn_display_favs">Display favorite listings</string>
+    <string name="profile_btn_display_own_listings">Display your listings</string>
     <string name="profile_edit_title">Edit profile information</string>
     <string name="profile_favorites_title">Favorite Listings</string>
     <string name="profile_favorites_no_favs">No favorite items yet</string>
