--- a/app/src/main/res/values/strings_bidding.xml
+++ b/app/src/main/res/values/strings_bidding.xml
@@ -6,4 +6,5 @@
     <string name="bidding_price_label">Place your bid</string>
     <string name="bidding_type_indicator">Auction\n\rCurrent bid:</string>
     <string name ="listing_deadline">This auction closes on : %s</string>
+    <string name ="current_bidder_indicator">You have currently the top bid</string>
 </resources>
